@@ -1,3 +1,13 @@
+2005-01-16  Andrew Cagney  <cagney@gnu.org>
+
+	* exceptions.c (struct catcher): Delete saved_error_pre_print and
+	saved_quit_pre_print.
+	(catcher_init): Delete parameter errstring, do not override the
+	pre_print strings.
+	(catcher_pop): Do not restore the pre_print strings.
+	(catch_exception, catch_exceptions_with_msg, catch_errors)
+	(catch_command_errors): Update catch_init calls.
+
 2005-01-16  Mark Kettenis  <kettenis@gnu.org>
 
 	* Makefile.in (sparc64fbsd-nat.o): Update dependencies.
